--- a/Resources/Prototypes/Reagents/biological.yml
+++ b/Resources/Prototypes/Reagents/biological.yml
@@ -145,6 +145,7 @@
           groups:
             Burn: -5
             Brute: -5
+            Airloss: -5 # for lings
             Toxin: -2
           types:
             Bloodloss: -5
